@@ -14,6 +14,7 @@ export(cortimeplot)
 export(covelement)
 export(covmat)
 export(covtimeplot)
+export(diagplot)
 export(expweightcov)
 export(facloadcredplot)
 export(facloaddensplot)
