@@ -62,7 +62,7 @@ If correlations haven't been stored during sampling,
 \seealso{
 Other plotting: \code{\link{comtimeplot}},
   \code{\link{corplot}}, \code{\link{cortimeplot}},
-  \code{\link{facloadcredplot}},
+  \code{\link{diagplot}}, \code{\link{facloadcredplot}},
   \code{\link{facloaddensplot}},
   \code{\link{facloadpairplot}},
   \code{\link{facloadpointplot}},
