@@ -1,11 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/plotting.R
-\name{facloadtraceplot}
-\alias{facloadtraceplot}
-\title{Trace plots of factor loadings draws}
+\name{diagplot}
+\alias{diagplot}
+\title{Several factor SV plots useful for model diagnostics}
 \usage{
-facloadtraceplot(x, fsvsimobj = NULL, thinning = NULL, maxrows = 10,
-  ylim = NULL)
+diagplot(x, fsvsimobj = NULL, ...)
 }
 \arguments{
 \item{x}{Object of class \code{'fsvdraws'}, usually resulting from a call
@@ -15,29 +14,23 @@ to \code{\link{fsvsample}}.}
 data, pass an object of type \code{fsvsim} (usually the result of a
 call to \code{\link{fsvsim}}).}
 
-\item{thinning}{Plot every \code{thinning}th draw.}
-
-\item{maxrows}{Indicates the maximum number of rows to be drawn per page.}
-
-\item{ylim}{Vector of length two containing lower and upper bounds of the
-vertical axis. If \code{NULL}, these are automatically determined.}
+\item{...}{Other arguments will be passed on to the subfunctions.}
 }
 \value{
 Returns \code{x} invisibly.
 }
 \description{
-\code{facloadtraceplot} draws trace plots of the factor loadings. Can be
-an important tool to check MCMC convergence if inference about (certain)
-factor loadings sought.
+Draws a collection of plots to explore the posterior distribution
+of a fitted factor SV model.
 }
 \seealso{
 Other plotting: \code{\link{comtimeplot}},
   \code{\link{corimageplot}}, \code{\link{corplot}},
-  \code{\link{cortimeplot}}, \code{\link{diagplot}},
-  \code{\link{facloadcredplot}},
+  \code{\link{cortimeplot}}, \code{\link{facloadcredplot}},
   \code{\link{facloaddensplot}},
   \code{\link{facloadpairplot}},
   \code{\link{facloadpointplot}},
+  \code{\link{facloadtraceplot}},
   \code{\link{logvartimeplot}},
   \code{\link{paratraceplot}}, \code{\link{plot.fsvdraws}},
   \code{\link{voltimeplot}}
