@@ -32,7 +32,8 @@ factor loadings posterior.
 \seealso{
 Other plotting: \code{\link{comtimeplot}},
   \code{\link{corimageplot}}, \code{\link{corplot}},
-  \code{\link{cortimeplot}}, \code{\link{facloadcredplot}},
+  \code{\link{cortimeplot}}, \code{\link{diagplot}},
+  \code{\link{facloadcredplot}},
   \code{\link{facloadpairplot}},
   \code{\link{facloadpointplot}},
   \code{\link{facloadtraceplot}},
