@@ -40,7 +40,8 @@ of the estimated factor loadings matrix.
 \seealso{
 Other plotting: \code{\link{comtimeplot}},
   \code{\link{corimageplot}}, \code{\link{corplot}},
-  \code{\link{cortimeplot}}, \code{\link{facloadcredplot}},
+  \code{\link{cortimeplot}}, \code{\link{diagplot}},
+  \code{\link{facloadcredplot}},
   \code{\link{facloaddensplot}},
   \code{\link{facloadpairplot}},
   \code{\link{facloadtraceplot}},
